# LCI-project

./: .gitignore  dune-project
lib/: CFG.ml  CFG.mli  CFG_pp.ml  CFG_pp.mli  MiniImp.ml  MiniImp.mli  MiniImp_cfg.ml  MiniImp_cfg.mli  MiniImp_interpreter.ml  MiniImp_interpreter.mli  MiniImp_pp.ml  MiniImp_pp.mli  MiniRisc.ml  MiniRisc.mli  MiniRisc_cfg.ml  MiniRisc_pp.ml  MiniRisc_pp.mli  MyLexer.mll  MyParser.mly  allocation.ml  allocation.mli  allocation_v3.ml  allocation_v4.ml  allocation_v4.mli  defined_var.ml  defined_var.mli  dune  generate.ml  generate.mli  generate_v2.ml  interference_graph.ml  interference_graph.mli  liveness.ml  liveness.mli  miniImp_cfg_pp.ml  miniImp_cfg_pp.mli  param_cfg.ml  param_cfg.mli  register.ml  register.mli  (+8 more)
lib/Allocation/: allocation.ml  allocation.mli
lib/IR_generation/: translate.ml  translate.mli  translate_cfg.mli
lib/Liveness/: liveness.ml  liveness.mli  liveness_table.ml  liveness_table.mli  register_set.ml  register_set.mli  use_def_table.ml  use_def_table.mli
lib/MiniImp/: MiniImp.ml  MiniImp.mli
lib/MiniImp_CFG/: generate.ml
lib/MiniRisc/: MiniRisc.ml  MiniRisc.mli  MiniRisc_cfg.ml  MiniRisc_cfg.mli
