(lang dune 3.16)

(name dune_cfg)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)



; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
